--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,3 +1,7 @@
 <head>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="_includes/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="_includes/favicon.svg" />
+  <link rel="shortcut icon" href="_includes/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="_includes/apple-touch-icon.png" />
+  <link rel="manifest" href="_includes/site.webmanifest" />
 </head>
