--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,3 +1,7 @@
 <head>
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
 </head>
+
+<header>
+  <a href="{{ /goose.png }}">{{ honk }}</a>
+</header>
