--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,8 +1,4 @@
-<body>
-  <div class="wrapper">
-    <header>
-      <a href="{{ /goose.png }}">{{ honk }}</a>
-    </header>
-  </div>
-</body>
+<header>
+      <li><a href="{{ /goose.png }}">{{ honk }}</a></li>
+</header>
   
