--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,4 +1,7 @@
-<header>
-      <li><a href="{{ /goose.png }}">{{ honk }}</a></li>
-</header>
-  
+<body>
+      <div class="wrapper">
+            <header>
+                  <li><a href="{{ /goose.png }}">{{ "honk" }}</a></li>
+            </header>
+      </div>
+</body>
