--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,5 +1,5 @@
 <body>
       <header>
-            <li><a href="{{ /goose.png }}">{{ "honk" }}</a></li>
+            <li><a href="{{ goose.png }}">{{ "honk" }}</a></li>
       </header>
 </body>
