--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,9 @@
     <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Minimal by Steve Smith</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+      
+    <title>site.title</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -18,7 +20,7 @@
     <div class="wrapper">
       
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
 
         <img src="{{site.logo | relative_url}}" alt="Logo" />
 
@@ -26,7 +28,11 @@
 
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
 
-        <p class="view"><a href="goose.png">honking hell I have no idea what is going on</a></p>
+        <li>
+          <a href="goose.png">honking hell</a>
+          <a href="https://ncatlab.org/nlab/show/HomePage">nlab</a>
+        </li>
+        
       </header>
       
       <section>
