--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,7 @@
 
         <hr>
         
-        <h3><a href="goose">honk</a></h3>
-        <h3><a href="arrow">stomp</a></h3>  
+        <h3><a href="/goose">honk</a></h3>
         
       </header>
       
