--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link rel="icon" type="image/svg+xml" href="{{ site.baseurl }}assets/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="{{ site.baseurl }}/assets/favicon.svg" />
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles.css">
     <title>{{ page.title }}</title>
