--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
         <hr>
         
         <h3><a href="/goose">honk</a></h3>
+        <h3><a href="/ddr">stomp</a></h3>
         
       </header>
       
