--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
 
         <hr>
         
-        <h3><a href="/goose">honk</a></h3>
-        <h3><a href="/ddr">stomp</a></h3>
+        <li><a href="/goose">honk</a></li>
+        <li><a href="/ddr">stomp</a></li>
         
       </header>
       
