--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
       
       <header>
-        <h1><a href="{{ "/" }}">{{ site.title }}</a></h1>
+        <h1 style="text-align: center"><a href="{{ "/" }}">{{ site.title }}</a></h1>
         <img src="{{site.logo | relative_url}}" alt="Logo" />
         <p>{{ site.description }}</p>
 
