--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
 
         <hr>
         
-        <p><a href="/goose">honk</a></p>
-        <p><a href="/ddr">stomp</a></p>
+        <p><a href="/goose">honk</a> <br>
+          <a href="/ddr">stomp</a></p>
         
       </header>
       
