--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #fff;
+  background-color: #f7d560;
   padding:50px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;;
   color:#595959;
