--- a/assets/styles.css
+++ b/assets/styles.css
@@ -162,12 +162,6 @@ footer {
   header a small {
     display:inline;
   }
-
-  header ul {
-    position:absolute;
-    right:50px;
-    top:52px;
-  }
 }
 
 @media print, screen and (max-width: 720px) {
@@ -179,7 +173,7 @@ footer {
     padding:0;
   }
 
-  header ul, header p.view {
+  header p.view {
     position:static;
   }
 
@@ -192,15 +186,6 @@ footer {
   body {
     padding:15px;
   }
-
-  header ul {
-    width:99%;
-  }
-
-  header li, header ul li + li + li {
-    width:33%;
-  }
-}
 
 @media print {
   body {
