--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,9 @@
     <meta property="og:title" content="Kian's (web) site">
     <meta property="og:description" content="essentially small">
     <meta property="og:image" content="http://kianc.site/assets/goose.png">
+    <meta property="og:image:width" content="200">
+    <meta property="og:image:height" content="200">
+
     
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles.css">
