--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         <hr>
         
         <p>
-          <a href="/math">Mathematics</a>
+          <a href="/math">Mathematics</a> <br>
           <a href="/goose">Ornitology</a> <br>
           <a href="/ddr">Politics</a>
         </p>
