--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         <hr>
         
         <p>
-          <a href="/goose"></a>About<br>
+          <a href="/goose">About</a><br>
           <a href="/math">Math</a> <br>
           <a href="/ddr">Fun</a>
         </p>
