--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,8 @@
         <hr>
         
         <p>
-          <a href="/goose">About</a><br>
           <a href="/math">Mathematics</a> <br>
+          <a href="/goose">Resources</a><br>
           <a href="/ddr">Activities</a>
         </p>
         
