--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,7 +1,7 @@
 body {
   background-color: #fcf4a3;
   padding:50px;
-  font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;;
+  font: 14px/1.5 Ubuntu;
   color:#595959;
   font-weight:400;
 }
