--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,9 +1,19 @@
+@font-face {
+    font-family: 'UbuntuRegular';
+    src: url('Ubuntu-R-webfont.eot');
+    src: url('Ubuntu-R-webfont.eot?#iefix') format('embedded-opentype'),
+         url('Ubuntu-R-webfont.woff') format('woff'),
+         url('Ubuntu-R-webfont.ttf') format('truetype'),
+         url('Ubuntu-R-webfont.svg#UbuntuRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
   background-color: #fcf4a3;
   padding:50px;
-  font: 14px/1.5 Ubuntu;
   color:#595959;
-  font-weight:500;
+  font-weight:400;
 }
 
 h1, h2, h3, h4, h5, h6 {
