--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 
         <hr>
         
-        <p style="padding-left: 20px;">
+        <p style="font-weight: bold; padding-left: 10px; line-height: 1.8">
           <a href="/math">Mathematics</a> <br>
           <a href="/goose">Resources</a> <br>
           <a href="/ddr">Activities</a>
