--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,10 @@
       </section>
       
       <footer>
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        <p class="view">
+          <a href="{{ site.github.owner_url }}">GitHub</a> <br>
+          <a href="https://www.linkedin.com/in/toposes/">LinkedIn</a>
+        </p>
         
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
