--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
           <a href="https://www.linkedin.com/in/toposes/">LinkedIn</a>
         </p>
         
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>created using <a href="https://github.com/orderedlist/minimal">minimal</a></small></p>
       </footer>
       
     </div>
