--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,10 @@
         <h1 style="text-align: center"><a href="{{ "/" }}">{{ site.title }}</a></h1>
         <img src="{{site.logo | relative_url}}" alt="Logo" />
         <p>{{ site.description }}</p>
+        <p class="view">
+          <a href="{{ site.github.owner_url }}">GitHub</a> <br>
+          <a href="https://www.linkedin.com/in/toposes/">LinkedIn</a> <br>
+        </p>
 
         <hr>
         
@@ -48,12 +52,9 @@
       </section>
       
       <footer>
-        <p class="view">
-          <a href="{{ site.github.owner_url }}">GitHub</a> <br>
-          <a href="https://www.linkedin.com/in/toposes/">LinkedIn</a>
-        </p>
         
-        <p><small>created using <a href="https://github.com/orderedlist/minimal">minimal</a></small></p>
+        
+        <p style="text-align: center"><small>created using <a href="https://github.com/orderedlist/minimal">minimal</a></small></p>
       </footer>
       
     </div>
