--- a/assets/styles.css
+++ b/assets/styles.css
@@ -131,6 +131,7 @@ footer {
   width:270px;
   float:left;
   position:fixed;
+  color:#ffce1b;
   bottom:0px;
   -webkit-font-smoothing:subpixel-antialiased;
 }
