--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,10 +30,7 @@
         <h1 style="text-align: center"><a href="{{ "/" }}">{{ site.title }}</a></h1>
         <img src="{{site.logo | relative_url}}" alt="Logo" />
         <p>{{ site.description }}</p>
-        <p class="view">
-          <a href="{{ site.github.owner_url }}">GitHub</a> <br>
-          <a href="https://www.linkedin.com/in/toposes/">LinkedIn</a> <br>
-        </p>
+        {% if page.author_profile or layout.author_profile %}{% include author-profile.html %}{% endif %}
 
         <hr>
         
