--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         <h1 style="text-align: center"><a href="{{ "/" }}">{{ site.title }}</a></h1>
         <img src="{{site.logo | relative_url}}" alt="Logo" />
         <p>{{ site.description }}</p>
-        {% if page.author_profile or layout.author_profile %}{% include author-profile.html %}{% endif %}
+        {% include author-profile.html %}
 
         <hr>
         
