--- a/assets/styles.css
+++ b/assets/styles.css
@@ -131,7 +131,7 @@ footer {
   width:270px;
   float:left;
   position:fixed;
-  color:#ffce1b;
+  color:#e1ad01;
   bottom:50px;
   -webkit-font-smoothing:subpixel-antialiased;
 }
