--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,10 +33,10 @@
         <img src="{{site.logo | relative_url}}" alt="Logo" />
         <p>{{ site.description }}</p>
 
-        <p>
-          <i class="fa-solid fa-location-dot"></i>&nbsp;{{ author.location }} <br>
-          <i class="fa-brands fa-github"></i><a href="https://github.com/{{ author.github }}">&nbsp;Github</a> <br>
-          <i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/{{ author.linkedin }}">&nbsp;LinkedIn</a> <br>
+        <p style="font-weight: 300; padding-left: 10px; line-height: 1.8">
+          <i class="fa-solid fa-location-dot"></i>&nbsp;Pittsburgh, PA <br>
+          <i class="fa-brands fa-github"></i><a href="https://github.com/toposes">&nbsp;Github</a> <br>
+          <i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/toposes">&nbsp;LinkedIn</a> <br>
         </p>
         
         <hr>
