--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,14 +33,6 @@
         <img src="{{site.logo | relative_url}}" alt="Logo" />
         <p>{{ site.description }}</p>
 
-        <p style="font-weight: 300; line-height: 1.8">
-          <i class="fa-solid fa-location-dot"></i> Pittsburgh, PA <br>
-          <i class="fa-brands fa-github"></i><a href="https://github.com/toposes"> Github</a> <br>
-          <i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/toposes"> LinkedIn</a>
-        </p>
-        
-        <hr>
-        
         <p class="contact-info">
           <span><i class="fa-solid fa-location-dot"></i> Pittsburgh, PA</span>
           <span>
@@ -52,6 +44,13 @@
             <a href="https://www.linkedin.com/in/toposes">LinkedIn</a>
           </span>
         </p>
+
+        <hr>
+
+        <p style="font-weight: 400; padding-left: 10px; line-height: 1.8">
+          <a href="/math">Mathematics</a> <br>
+          <a href="/goose">Resources</a> <br>
+          <a href="/ddr">Activities</a>
         
       </header>
       
