--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,23 @@
         <img src="{{site.logo | relative_url}}" alt="Logo" />
         <p>{{ site.description }}</p>
 
+        <hr>
+
+        <p style="font-weight: 400; padding-left: 10px; line-height: 1.8">
+          <a href="/math">Mathematics</a> <br>
+          <a href="/goose">Resources</a> <br>
+          <a href="/ddr">Activities</a>
+        </p>
+        
+      </header>
+      
+      <section>
+
+      {{ content }}
+
+      </section>
+      
+      <footer>
         <p class="contact-info">
           <span><i class="fa-solid fa-location-dot"></i> Pittsburgh, PA</span><br>
           <span>
@@ -44,26 +61,8 @@
             <a href="https://www.linkedin.com/in/toposes">LinkedIn</a>
           </span>
         </p>
-
-        <hr>
-
-        <p style="font-weight: 400; padding-left: 10px; line-height: 1.8">
-          <a href="/math">Mathematics</a> <br>
-          <a href="/goose">Resources</a> <br>
-          <a href="/ddr">Activities</a>
         
-      </header>
-      
-      <section>
-
-      {{ content }}
-
-      </section>
-      
-      <footer>
-        
-        
-        <p style="text-align: center"><small>created using <a href="https://github.com/orderedlist/minimal"; style="color: #e1ad01;">minimal</a></small></p>
+        <p><small>created using <a href="https://github.com/orderedlist/minimal"; style="color: #ffce1b;">minimal</a></small></p>
       </footer>
       
     </div>
