--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,16 @@
 
         <hr>
 
+        <div class="container">
+          <div>
+            <a href="/math">Mathematics</a> <br>
+            <a href="/goose">Resources</a>
+          </div>       
+          <div>
+            <a href="/ddr">Activities</a>
+          </div>
+        </div>
+        
         <p style="font-weight: 400; line-height: 1.8">
           <a href="/math">Mathematics</a> <br>
           <a href="/goose">Resources</a> <br>
