--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 
         <hr>
 
-        <div class="container">
+        <div class="cols">
           <div>
             <a href="/math">Mathematics</a> <br>
             <a href="/goose">Resources</a>
