--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,8 @@
             <a href="/ddr">Activities</a>
           </div>       
           <div style="color: #fcf4a3">
-            <a href="/error">don't click</a>
+            <a href="/error" style="color: #fcf4a3">don't click</a> <br>
+            secret text
           </div>
         </div>
         
