--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,11 +50,12 @@
           <div>
             <a href="/math">Mathematics</a> <br>
             <a href="/goose">Resources</a> <br>
-            <a href="/ddr">Activities</a>
+            <a href="/ddr">Activities</a> <br>
           </div>       
           <div style="color: #fcf4a3">
             <a href="/error" style="color: #fcf4a3">don't click</a> <br>
-            secret text
+            secret text <br>
+            hello <br>
           </div>
         </div>
         
