--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
 
         <div class="cols">
           <div>
-            <a href="pages/math">Mathematics</a> <br>
+            <a href="pages/math">Research</a> <br>
             <a href="pages/notes">Writings</a> <br>
             <a href="pages/talks">Talks</a>
           </div>       
