--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,14 +48,14 @@
 
         <div class="cols">
           <div>
-            <a href="/math">Research</a> <br>
-            <a href="/notes">Writings</a> <br>
-            <a href="/talks">Talks</a>
+            <a href="/math/">Research</a> <br>
+            <a href="/notes/">Writings</a> <br>
+            <a href="/talks/">Talks</a>
           </div>       
           <div style="color: #fcf4a3">
-            <a href="/goose" style="color: #fcf4a3">goose</a> <br>
-            <a href="/error" style="color: #fcf4a3">error</a> <br>
-            <a href="/ddr" style="color: #fcf4a3">dance</a>
+            <a href="/goose/" style="color: #fcf4a3">goose</a> <br>
+            <a href="/error/" style="color: #fcf4a3">error</a> <br>
+            <a href="/ddr/" style="color: #fcf4a3">dance</a>
           </div>
         </div>
         <p></p>
